--- a/protocoin-faucet/src/App.css
+++ b/protocoin-faucet/src/App.css
@@ -3,8 +3,19 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 35vmin;
   pointer-events: none;
+  opacity: .6;
+}
+
+.App-logo-alt {
+  height: 20vmin;
+  pointer-events: none;  
+}
+
+.App-logo-alt:hover {  
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
