--- a/protocoin-faucet/src/App.css
+++ b/protocoin-faucet/src/App.css
@@ -3,18 +3,17 @@
 }
 
 .App-logo {
-  height: 35vmin;
-  pointer-events: none;
-  opacity: .6;
+  height: 30vmin;
+  pointer-events: none;  
 }
 
 .App-logo-alt {
   height: 20vmin;
-  pointer-events: none;  
+  pointer-events: none;
 }
 
-.App-logo-alt:hover {  
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+.App-logo-alt:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   color: white;
 }
 
@@ -24,17 +23,33 @@
   }
 }
 
-.App-header {
-  background-color: #1e81b0;
-  background-image: url('wallpaper.png');
-  background-size: 100% 100%;  
-  min-height: 100vh;
+.App-wrap {
+  overflow: hidden;
+  position: relative;
+}
+
+.App-bg {
+  /* background-color: #1e81b0; */
+  /* background-image: url('wallpaper.png'); */
+  /* background-size: 100% 100%; */
+  /* opacity: 0.8; */
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.App-content {
+  position: relative;
+  min-height: 93vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #154c79;
+  color: #61dafb;
 }
 
 .App-link {
@@ -45,6 +60,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -52,7 +68,8 @@
 
 .Button {
   transition-duration: 0.4s;
-  background-color: #FF5F1F; /* Neon Orange */
+  background-color: #FF5F1F;
+  /* Neon Orange */
   border: none;
   border-radius: 4px;
   color: white;
@@ -64,7 +81,8 @@
 }
 
 .Button:hover {
-  background-color: #FFA500; /* Orange */
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #FFA500;
+  /* Orange */
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   color: white;
 }
